syntax = "proto3";

service UsersService {
  rpc Create(CreateUserRequest) returns (User) {};
  rpc Login(LoginRequest) returns (User) {};
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string type = 5;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}