syntax = "proto3";

option go_package = "./pb";

message VideoUploadRequest {
  oneof data{
    VideoInfo info = 1;
    bytes chunk = 2;
  }
}

service FileUploadService {
  rpc VideoUpload(stream VideoUploadRequest) returns (VideoUploadResponse) {};
  rpc GetVideo(GetVideoRequest) returns (GetVideoResponse) {};
}

message VideoInfo {
  string user_id = 1;
  string type = 2;
  int64 size = 3;
}

message VideoUploadResponse {
  string id = 1;
}

message VideoResolution {
  string resolution = 1;
	string complete_resolution = 2;
	string url = 3;
}

message GetVideoRequest {
  string id = 1;
}

message GetVideoResponse {
  string id = 1;
  string type = 2;
  string status = 3;
  int64 size = 4;
  repeated VideoResolution resolutions = 5;
  string createdAt = 6;
  string updatedAt = 7;
  string url = 8;
}